# collarz_viz

./: .gitignore  notes.txt  pyproject.toml
collatz_viz/: Sctratch Demo.ipynb  collatz_viz.py  manim.cfg  manim_tutorial.py
tests/: test_collatz_viz.py
